syntax = "proto3";

package shared;

option go_package = "github.com/dimitarsi/go-chat-app/grpc/shared";

message User {
    string user_id = 1;
    string display_name = 2;
}

message Room {
    string room_id = 1;
    string room_name = 2;
    string room_topic = 3;
    User host = 4;
} 